--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -3,13 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
-  - hydra-core=1.3.2
-  - matplotlib=3.10.6
+  - python=3.12
+  # - hydra-core=1.3.2
+  # - matplotlib=3.10.6
   - pandas=2.3.2
   - pip=24.3.1
-  - scikit-learn=1.3.2
+  #  - scikit-learn=1.3.2
   - jupyterlab=4.4.7
+  - ydata-profiling=4.16.0
+  - ipywidgets=8.1.7
   - pip:
       - mlflow==3.3.2
       - wandb==0.21.3
